# stm32f7-disco-template

./: CMakeLists.txt  STM32F723IEKx_FLASH.ld
cmake/: CheckGit.cmake  git_version.cpp.in  git_version.h
cmake/check-git/: CheckGit.cmake
drivers/BSP/STM32F723E-Discovery/: README.md  Release_Notes.html  stm32f723e_discovery_lcd.c  stm32f723e_discovery_lcd.h  stm32f723e_discovery_ts.c  stm32f723e_discovery_ts.h
drivers/STM32F7xx_HAL_Driver/: stm32f7xx_hal_msp.c
drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_ll_utils.c
include/bsp/lcd_st7789h2/: lcd_st7789h2.h
include/bsp_f723_disco/: bsp_f723_disco_def.h
include/bsp_f723_disco/button/: button.cpp  button.h
include/bsp_f723_disco/lcd_st7789h2/: lcd_st7789h2.cpp  lcd_st7789h2.h
include/bsp_f723_disco/leds/: leds.cpp  leds.h
include/bsp_f723_disco/pmod/: pmod.cpp  pmod.h
include/emb/: emb_algorithm.h  emb_core.h  emb_def.h  emb_string.h
include/mcu_stm32f7/: mcu_def.h
include/mcu_stm32f7/can/: mcu_can.cpp  mcu_can.h
include/mcu_stm32f7/clock/: mcu_clock.cpp  mcu_clock.h
include/mcu_stm32f7/gpio/: mcu_gpio.cpp  mcu_gpio.h
include/mcu_stm32f7/system/: mcu_system.cpp  mcu_system.h
include/mcu_stm32f7/uart/: mcu_uart.cpp  mcu_uart.h
src/: main.cpp  startup_stm32f723xx.s
src/cli/: cli_config.h  cli_server.cpp  cli_server.h
src/cli/cmd/: cli_reboot.cpp  cli_sysctl.cpp  cli_uptime.cpp
src/hal_init/: hal_init.cpp
src/mcu_stm32f7/system/: mcu_system.cpp  mcu_system.h
